fixed - Terms & Conditions 'X' close button alignment issue.

--- a/src/component/CartCouponTermsAndConditions/CartCouponTermsAndConditions.style.scss
+++ b/src/component/CartCouponTermsAndConditions/CartCouponTermsAndConditions.style.scss
@@ -138,18 +138,19 @@
     }
 } 
 
-.closebuttonDiv {
+.closebuttonWrapperDiv {
     position:relative;
     width: 100%;
     height: 30px;
-    .closePopupbtn {
+    .closePopupbutton {
         cursor: pointer;
         float: right;
         padding: 0;
         &:before {
             content: "";
             position: absolute;
-            top: 2px;
+            right: 5px;
+            top: 5px;
             display: inline-block;
             padding: 1px;
             background-image: url(/static/media/icon.12cc0c19.svg);
